--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Software Developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Los Angeles, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy Fishing, hiking, playing basketball and soccer.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is at a place where I am valued and appreciated.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Los Angeles,CA </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's a career that has constantly been mentioned to me and it seems like the perfect time to begin.</p>
     </section>
 
     <footer id="footer">
